--- a/pages/凯特琳·徒利.md
+++ b/pages/凯特琳·徒利.md
@@ -1,4 +1,4 @@
-alias:: [[Catelyn Tully]], #凯特琳·史塔克
+alias:: [[Catelyn Tully]], 凯特琳·史塔克, 凯特琳
 avatar:: ![image.png](../assets/image_1692470350454_0.png){:height 555, :width 625} 
 家族:: #徒利家族 #史塔克家族
 地域:: #北境
